--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/imposter.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
+      <h2>Loading...</h2>
     </div>
-    <script src="js/compiled/imposter.js" type="text/javascript"></script>
+    <script src="js/imposter.js"></script>
+    <script src="components/svgxuse/svgxuse.min.js"></script>
   </body>
 </html>
