--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h2>Loading...</h2>
+      <h2>Loading app</h2>
     </div>
     <script src="js/imposter.js"></script>
     <script>imposter.core.main();</script>
