--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,7 +11,7 @@
       <h2>Loading app</h2>
     </div>
     <script src="js/imposter.js"></script>
-    <script>imposter.core.main();</script>
+    <script>mkp.imposter.core.main();</script>
     <script defer src="components/svgxuse/svgxuse.min.js"></script>
   </body>
 </html>
