--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <h2>Loading app</h2>
+      <img class="app-loader" src="/assets/icons/app_loader.svg">
     </div>
     <script src="js/imposter.js"></script>
     <script>mkp.imposter.core.main();</script>
