--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,14 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/imposter.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="https://clojurescript.org/images/cljs-logo-icon-32.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <div id="app">
             <div class="loader"></div>
             <img class="app-loader" src="/assets/icons/app_loader.svg">
         </div>
-        <script src="js/imposter.js"></script>
+        <script src="js/imposter.js?v=1.0.0"></script>
         <script>mkp.imposter.core.main();</script>
         <script defer src="components/svgxuse/svgxuse.min.js"></script>
     </body>
