Enhance thumbnail placeholder styling, bump version

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/imposter.css" rel="stylesheet" type="text/css">
+        <link href="css/imposter.css?v=1.0.3" rel="stylesheet" type="text/css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,7 +18,7 @@
             <div class="loader"></div>
             <img class="app-loader" src="/assets/icons/app_loader.svg">
         </div>
-        <script src="js/imposter.js?v=1.0.2"></script>
+        <script src="js/imposter.js?v=1.0.3"></script>
         <script>mkp.imposter.core.main();</script>
         <script defer src="components/svgxuse/svgxuse.min.js"></script>
     </body>
