--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs" manifest="/imposter.appcache">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/imposter.css?v=1.0.10" rel="stylesheet" type="text/css">
+        <link href="/css/imposter.css?v=1.0.11" rel="stylesheet" type="text/css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -16,10 +16,10 @@
     <body>
         <div id="app">
             <div class="loader"></div>
-            <img class="app-loader" src="/assets/icons/app_loader.svg">
+            <img alt="loader" class="app-loader" src="/assets/icons/app_loader.svg">
         </div>
-        <script src="js/imposter.js?v=1.0.10"></script>
+        <script src="/js/imposter.js?v=1.0.11"></script>
         <script>mkp.imposter.core.main();</script>
-        <script defer src="components/svgxuse/svgxuse.min.js"></script>
+        <script defer src="/components/svgxuse/svgxuse.min.js"></script>
     </body>
 </html>
